k8s/05-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: kmoganti/result:eks-v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting-app
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
